lib/queue-msg-macro/tests/non-struct.stderr
error: Only support Structs
 --> tests/non-struct.rs:3:1
  |
3 | #[msg_struct]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `msg_struct` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Only support Structs
 --> tests/non-struct.rs:9:1
  |
9 | #[msg_struct]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `msg_struct` (in Nightly builds, run with -Z macro-backtrace for more info)
